fixed width issues on mobile

--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -3,5 +3,6 @@
 }
 
 .mat-card {
-    min-width: 400px;
+    min-width: 300px;
+    max-width: 600px;
 }
