--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -3,6 +3,7 @@
 }
 
 .mat-table, .mat-card {
-    min-width: 400px;
+    min-width: 300px;
+    max-width: 600px;
     background-color: #FFFFFF;
 }
