--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,5 @@ $custom-theme: mat-light-theme($custom-theme-primary, $custom-theme-accent, $cus
 
 @include angular-material-theme($custom-theme);
 html { background-color: #EEEEEE; }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%; overflow-x: hidden;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; position: relative}
